    floating-point properly on FreeBSD.
 -- Add Solaris-friendly checks for fenv.h, fesetprec(), and
    fegetprec() to choose double-precision floating-point properly on
    Solaris without inadvertently trying to use fenv.h on MacOS or SuSE.
 -- local_data_create() in local.cpp was not being called for the
    create() side-effect function.  Found and fixed by Alierak.
 -- lstack() left a trailing output separator (space).  It also contains
    some unreachable code.  Found and fixed by Alierak.
 -- VDIM() referenced uninitialized memory.  Borrowed the correct
    implementaiton from WORDS() since the two are nearly identical.
    Found and fixed by Alierak.
 -- Fix @mail/quick evaluation from 2.4.0.18 so that spaces are not
    compressed.
 -- Fix unexploitable buffer overflow with too many substring matches
    in a regexp $-command. Found and fixed by Alierak.


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~
 -- Re-worked update_quotas() so that mudstate.now could be removed.
 -- Use nanosleep() or usleep() on Unix if available.
 -- Pulled alloc/free pairs outside an inner loop in switch() and
    fold().
 -- Improve performance by avoiding write-through caching of A_MONEY in
    the player cache. This was probably the primary reason for needing
    one cached hash page per player. Paging is probably secondary to
    this one.


Cosmetic Changes:
~~~~~~~~~~~~~~~~
 -- Increased the space available to WHO for @moniker names to provide
    more room for more ANSI transitions.
 -- Remove references to have_macros in wizhelp.txt


Miscellaneous:
~~~~~~~~~~~~~
 -- Added ATTACK notes.
 -- Added @folder as an alias for @mail/folder and @file as an alias for
    @mail/file.
 -- Remove configure checks for mktime() and timelocal().
 -- Alierak removed the last two direct uses of delim_check in lnum()
    and lcmds().
 -- Alierak removed stale code in add_player_name() since disallowed
    names are stored separately.